# django_prod

./: .env  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: db.sqlite3
mysite/mysite/: settings.py
